Yet another commit

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <a href="...">
                                 <img id="logo" src="images/logo.svg">
                                 <span style="vertical-align:middle;">
-                                    Karnataka <span style="font-weight:600;color:black"> Paper Tubes </span>
+                                    Karnataka <span style="font-weight:900;color:#db882b"> Paper Tubes </span>
                                 </span>
                             </a>
                         </div>
@@ -59,12 +59,13 @@
                                 cores. We deliver our customers complete solution for their packaging needs
                                 comprising of superior quality and cost-effective products such as Paper Core,
                                 BOPP
-                                Tape Cores, and Paper Mill Cores etc. in varied sizes and strengths. Tirupati
+                                Tape Cores, and Paper Mill Cores etc. in varied sizes and strengths. Karnataka
                                 Paper
-                                Cores has a unit at Hyderabad, Telangana, India. We have team of dedicated
+                                Tubes has a unit at Bengaluru, India. We have team of dedicated
                                 people
                                 who understands the needs of our customers and deliver them with satisfactory
-                                output. Tirupati Paper Cores has earned a reputation of being trust worthy
+                                output. Karnataka Paper
+                                Tubes has earned a reputation of being trust worthy
                                 partner
                                 among all its Customers, Vendors & Associates.
                             </p>
@@ -120,7 +121,7 @@
         <section id="product-details">
             <div class="wrapper container">
                 <h3 id="product-title">PRODUCT DETAILS</h3>
-                <h5 style="padding: 8px 24px 4px 24px; color: #e08b2c; font-weight: bold; margin: 0px;">Series for 3
+                <h5 style="padding: 8px 24px 4px 24px; color: white; font-weight: bold; margin: 0px;">Series for 3
                     inch Dia Core</h5>
                 <p id="product-desc">
                     Functional performance of 3n winding cores are delivered by team K.P.T which has over 12 years of
@@ -212,29 +213,165 @@
         <section id="quality-control">
             <div class="wrapper container">
                 <h3 id="quality-control-title">QUALITY CONTROLS</h3>
-                <h5 style="padding: 8px 24px 4px 24px; color: #e08b2c; font-weight: bold; margin: 0px;">3-Point
+                <h5 style="padding: 8px 24px 12px 24px; color: #ffffff; font-weight: bold; margin: 0px;">3-Point
                     Inspection Process</h5>
-                <div class="quality-control-points">
-                    <span class="circle"><i class="fa fa-check"></i></span>
-                    Inspection Process insures that customers’ needs are always met with the highest
-                    quality tubes and
-                    cores.  Cores are inspected in our sorting areas, at our cutting stations and in our packaging
-                    department prior to delivery to the customer.  All tubes and cores are checked for smoothness
-                    and
-                    roundness, and to be sure that they are free of contaminants.
+                <div id="quality-control-steps">
+                    <div class="my-step">
+                        <div>
+                            <div class="circle"><i class="fa fa-circle-o" aria-hidden="true"></i></div>
+                        </div>
+                        <div>
+                            <div class="title">
+                                <p class="quality-control-points">
+                                    Inspection Process insures that customers’ needs are always met with the highest
+                                    quality tubes and
+                                    cores.  Cores are inspected in our sorting areas, at our cutting stations and in
+                                    our
+                                    packaging
+                                    department prior to delivery to the customer.  All tubes and cores are checked for
+                                    smoothness
+                                    and
+                                    roundness, and to be sure that they are free of contaminants.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="my-step">
+                        <div>
+                            <div class="circle"><i class="fa fa-circle-o" aria-hidden="true"></i></div>
+                        </div>
+                        <div>
+                            <div class="title">
+                                <p class="quality-control-points">
+                                    Cores are used by manufacturers and converters of film, paper and textiles,
+                                    using the latest
+                                    machinery. You can be assured that our cores will meet your needs for any
+                                    application.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="my-step">
+                        <div>
+                            <div class="circle"><i class="fa fa-circle-o" aria-hidden="true"></i></div>
+                        </div>
+                        <div>
+                            <div class="title">
+                                <p class="quality-control-points">
+                                    Paper Tube &amp; Core&#39;s efforts have resulted in an average cost savings of
+                                    10-15% while
+                                    simultaneously supporting Eco-Friendly efforts that have become primary features of
+                                    corporate
+                                    marketing and positioning initiatives.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="quality-control-points">
-                    <span class="circle"><i class="fa fa-check"></i></span>
-                    Cores are used by manufacturers and converters of film, paper and textiles,
-                    using the latest
-                    machinery. You can be assured that our cores will meet your needs for any application.
+                <h3 id="quality-control-equipments-title">─── EQUIPMENTS ───</h3>
+                <div class="columns">
+                    <div class="column col-3">
+                        <div class="equipment-images">
+                            <figure class="figure">
+                                <div><img class="img-fit-cover img-responsive" src="images/gsm.jpg" alt="GSM TESTER"></div>
+                                <figcaption class="figure-caption text-center equipment-label">GSM Tester</figcaption>
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="column col-3">
+                        <div class="equipment-images">
+                            <figure class="figure">
+                                <div><img class="img-fit-cover img-responsive" src="images/cobb-tester-500x500.jpeg"
+                                        alt="COBB VLAUE TESTER"></div>
+                                <figcaption class="figure-caption text-center equipment-label">COBB Value Tester</figcaption>
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="column col-3">
+                        <div class="equipment-images">
+                            <figure class="figure">
+                                <div><img class="img-fit-cover img-responsive" src="images/Bursting-Strength-Tester-for-Paper-Boards-BF.jpg_300x300.jpg"
+                                        alt="BF TESTER"></div>
+                                <figcaption class="figure-caption text-center">
+                                    <marquee class="equipment-label">Bursting Strength Tester</marquee>
+                                </figcaption>
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="column col-3">
+                        <div class="equipment-images">
+                            <figure class="figure">
+                                <div><img class="img-fit-cover img-responsive" src="images/paper-core-compression-strength-tester-187583.jpg"
+                                        alt="CS TESTER"></div>
+                                <figcaption class="figure-caption text-center">
+                                    <marquee class="equipment-label">Compression Strength Tester</marquee>
+                                </figcaption>
+                            </figure>
+                        </div>
+                    </div>
                 </div>
-                <div class="quality-control-points">
-                    <span class="circle3"><i class="fa fa-check"></i></span>
-                    Paper Tube &amp; Core&#39;s efforts have resulted in an average cost savings of
-                    10-15% while
-                    simultaneously supporting Eco-Friendly efforts that have become primary features of corporate
-                    marketing and positioning initiatives.
+            </div>
+        </section>
+
+        <section id="machinery-details">
+            <div class="wrapper container">
+                <h3 id="machinery-details-title">MACHINERY DETAILS</h3>
+                <div class="machinery-details-table">
+                    <table class="table table-striped table-hover">
+                        <thead>
+                            <tr>
+                                <th>MACHINES</th>
+                                <th>UNIT 1 (K.T)</th>
+                                <th>UNIT 2 (K.P.T)</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="active">
+                                <td>Spiral Winding</td>
+                                <td>18 layers spiral</td>
+                                <td>32layers spiral with heavy duty</td>
+                            </tr>
+                            <tr>
+                                <td>Paper Slitting</td>
+                                <td>1Without core 0.95mtr length
+                                    slitting machinel</td>
+                                <td>With core 1.2mtr length heavy duty</td>
+                            </tr>
+                            <tr class="active">
+                                <td>Fine cutting</td>
+                                <td>2no fine cutting manual machine</td>
+                                <td>2nos automatic fine cutting with 2mtr and 3mtr length</td>
+                            </tr>
+                            <tr>
+                                <td>Fine cutting</td>
+                                <td>Baby cores fine cutting 1no</td>
+                                <td>No</td>
+                            </tr>
+                            <tr class="active">
+                                <td>Nosing Machine</td>
+                                <td>1no double side</td>
+                                <td>No</td>
+                            </tr>
+                            <tr>
+                                <td>Seaming machine</td>
+                                <td>2nos bottom seaming machine</td>
+                                <td>No</td>
+                            </tr>
+                            <tr class="active">
+                                <td>Oven</td>
+                                <td>11No 5mtr x 3mtr box</td>
+                                <td>-</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </section>
+        <section id="green-works">
+            <div class="wrapper container">
+                <h3 id="green-works-title">Company's social responsibilty towards environmental view</h3>
+                <div class="green-works-desc">
+                    
                 </div>
             </div>
         </section>
