--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
         crossorigin="anonymous">
         <meta name="theme-color" content="#131313">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -24,7 +25,7 @@
                 <div class="navbar">
                     <section class="navbar-section">
                         <a href="..." class="btn btn-link">Home</a>
-                        <a href="..." class="btn btn-link">About</a>
+                        <a href="#about" class="btn btn-link">About</a>
                     </section>
                     <section class="navbar-center">
                         <div id="logo-container" class="navbar-brand mr-2">
@@ -37,9 +38,9 @@
                         </div>
                     </section>
                     <section class="navbar-section">
-                        <a href="..." class="btn btn-link">Products</a>
-                        <a href="..." class="btn btn-link">Contact</a>
-                        <a href="..." class="btn btn-link">Green works</a>
+                        <a href="#product-details" class="btn btn-link">Products</a>
+                        <a href="#contact-us" class="btn btn-link">Contact</a>
+                        <a href="#green-works" class="btn btn-link">Green works</a>
                     </section>
                 </div>
             </div>
@@ -104,18 +105,6 @@
                     </div>
 
                 </div>
-            </div>
-        </section>
-
-        <section id="unit-size">
-            <div class="wrapper container">
-                <img id="unit-icon" src="images/measuring-tape.svg">
-                <h3 id="size-of-the-unit">SIZE OF THE UNIT</h3>
-                <p id="unit-size-desc">
-                    Each firm is having area of 5000 square ft. shed with open are of 2000 square ft. for loading and
-                    unloading the material and also we have our own transportation for delivering the material to
-                    customer end. Each firm has 40hp capacity with generator facility.
-                </p>
             </div>
         </section>
 
@@ -372,10 +361,57 @@
             <div class="wrapper container">
                 <h3 id="green-works-title">Company's social responsibilty towards environmental view</h3>
                 <div class="green-works-desc">
-
+                    
                 </div>
             </div>
         </section>
+        <section id="contact-us">
+            <div class="wrapper container">
+                    <h3 id="contact-us-title">CONTACT US</h3>
+                    <div class="columns">
+                        <div class="column col-4">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d62202.340280184515!2d77.481216!3d12.994462!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae3c511026d305%3A0xd96db568e1c6776a!2sKARNATAKA+PAPER+TUBES!5e0!3m2!1sen!2sus!4v1546930032812" 
+                            width="400" height="300" frameborder="0" style="border:2px solid black" allowfullscreen>
+                            </iframe>
+                        </div>
+                        <div class="column col-4">
+                            <div class="office-address">
+                                <h6 id="registered-office-title">REGISTERED OFFICE:</h6>
+                                <p class="office-address-font">
+                                    M/S. KARNATAKA PAPER TUBES<br>
+                                    #101,102,3 RD CROSS, KTG COLLEG ROAD,<br> 
+                                    HEGANAHALLI MAIN ROAD,<br>
+                                    BANGALORE-560091<br>
+                                </p>
+                            </div>
+                            <div class="office-address">
+                                    <p class="office-address-font">
+                                        M/S. KARNATAKA TRADERS<br>
+                                        #101,102,3 RD CROSS, KTG COLLEG ROAD,<br>
+                                        HEGANAHALLI MAIN ROAD,<br>
+                                        BANGALORE-560091
+                                </p>
+                                </div>
+                        </div>
+                        <div class="column col-4">
+                                <div class="form-group">
+                                    <input class="form-input" type="text" id="form-name" placeholder="Name">
+                                </div>
+                                <div class="form-group">
+                                        <input class="form-input" type="email" id="form-email" placeholder="Email">
+                                </div>
+                                <div class="form-group">
+                                    <input class="form-input" type="text" id="form-contact" placeholder="Phone no.">
+                                </div>
+                                <div class="form-group">
+                                    <textarea class="form-input" id="form-textarea" placeholder="Your comments here" rows="3"></textarea>
+                                </div>
+                                <button class="button"><span>Submit</span></button>
+                        </div>
+                    </div>
+            </div>
+        </section>
+        <a href="javascript:" id="return-to-top"><i class="fa fa-chevron-up" aria-hidden="true"></i></a>
     </main>
 
     <!-- Scripts -->
@@ -401,6 +437,18 @@
                 arrows: true
             });
         });
+        $(window).scroll(function() {
+    if ($(this).scrollTop() >= 50) {        // If page is scrolled more than 50px
+        $('#return-to-top').fadeIn(200);    // Fade in the arrow
+    } else {
+        $('#return-to-top').fadeOut(200);   // Else fade out the arrow
+    }
+});
+$('#return-to-top').click(function() {      // When arrow is clicked
+    $('body,html').animate({
+        scrollTop : 0                       // Scroll to top of body
+    }, 500);
+});
     </script>
 </body>
 
