commented green works

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="container">
                 <div class="navbar">
                     <section class="navbar-section">
-                        <a href="..." class="btn btn-link">Home</a>
+                        <a href="#about" class="btn btn-link">Home</a>
                         <a href="#about" class="btn btn-link">About</a>
                     </section>
                     <section class="navbar-center">
@@ -357,21 +357,21 @@
                 </div>
             </div>
         </section>
-        <section id="green-works">
+        <!-- <section id="green-works">
             <div class="wrapper container">
                 <h3 id="green-works-title">Company's social responsibilty towards environmental view</h3>
                 <div class="green-works-desc">
                     
                 </div>
             </div>
-        </section>
+        </section> -->
         <section id="contact-us">
             <div class="wrapper container">
                     <h3 id="contact-us-title">CONTACT US</h3>
                     <div class="columns">
                         <div class="column col-4">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d62202.340280184515!2d77.481216!3d12.994462!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae3c511026d305%3A0xd96db568e1c6776a!2sKARNATAKA+PAPER+TUBES!5e0!3m2!1sen!2sus!4v1546930032812" 
-                            width="400" height="300" frameborder="0" style="border:2px solid black" allowfullscreen>
+                            width="400" height="300" frameborder="0" style="border:2px solid black" gesture="media" allow="encrypted-media" allowfullscreen>
                             </iframe>
                         </div>
                         <div class="column col-4">
