link underline none

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </section>
                     <section class="navbar-center">
                         <div id="logo-container" class="navbar-brand mr-2">
-                            <a href="...">
+                            <a href="#about">
                                 <img id="logo" src="images/logo.svg">
                                 <span style="vertical-align:middle;">
                                     Karnataka <span style="font-weight:900;color:#db882b"> Paper Tubes </span>
