--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
         crossorigin="anonymous">
     <meta name="theme-color" content="#131313">
+    <meta name="Description" content="Paper Tube, Packaging Tube &amp; Paper Core Manufacturer offered by Karnataka paper tubes from Bengaluru, Karnataka, India">
+    <meta name="Keywords" content="Paper Tube, Packaging Tube, Paper Core, Fabric Paper Tube, Craft Paper Tube, Heavy Reel Paper Core, Packaging Paper Core, Karnataka Traders, Bengaluru">
+    <meta name="robots" content="index,follow">
+    <!-- Open Meta Data -->
+    <meta property="og:title" content="Karnataka Paper Tubes - Manufacturer of Paper Tube &amp; Packaging Tube from Bengaluru">
+    <meta property="og:site_name" content="karnatakapapertubes.com">
+    <meta property="og:url" content="www.karnatakapapertubes.com">
+    <meta property="og:image" content="www.karnatakapapertubes.com/images/paper-cores-250x250-250x250.jpg">
+    <meta property="og:image:url" content="www.karnatakapapertubes.com/images/paper-cores-250x250-250x250.jpg">
+    <meta property="og:image:width" content="500">
+    <meta property="og:image:height" content="500">
+    <meta property="og:description" content="Paper Tube, Packaging Tube &amp; Paper Core Manufacturer offered by Karnataka Paper Tubes from Bengaluru, Karnataka, India">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
