--- a/index.html
+++ b/index.html
@@ -369,14 +369,14 @@
                 </div>
             </div>
         </section>
-        <!-- <section id="green-works">
+        <section id="green-works">
             <div class="wrapper container">
                 <h3 id="green-works-title">Company's social responsibilty towards environmental view</h3>
                 <div class="green-works-desc">
                     
                 </div>
             </div>
-        </section> -->
+        </section>
         <section id="contact-us">
             <div class="wrapper container">
                 <h3 id="contact-us-title">CONTACT US</h3>
